fix title on mobile

--- a/src/styles/main/slider.scss
+++ b/src/styles/main/slider.scss
@@ -48,7 +48,6 @@
   color: #fff;
   font-size: 4rem;
   margin: 0 0 30px;
-  white-space: nowrap;
   
   @media (max-width:992px) {
     font-size: 2.8rem;
